--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.23.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
@@ -15,6 +16,7 @@
     "react-leaf-carousel": "^2.0.3",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "rxjs": "^7.4.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
