--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-infinite-scroll-component": "^6.1.0",
-    "react-leaf-carousel": "^2.0.3",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "rxjs": "^7.4.0",
+    "swiper": "^6.0.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
